; ModuleID = '/home/carl/AnghaBench/qmk_firmware/layouts/community/ortho_4x12/symbolic/extr_keymap.c_LowerReleased.c'
source_filename = "/home/carl/AnghaBench/qmk_firmware/layouts/community/ortho_4x12/symbolic/extr_keymap.c_LowerReleased.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@_LOWER = common dso_local global i32 0, align 4
@_RAISE = common dso_local global i32 0, align 4
@_NEUTRAL = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @LowerReleased(i32 %0) #0 {
  %2 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %3 = load i32, i32* %2, align 4
  %4 = icmp ne i32 %3, 0
  br i1 %4, label %5, label %6

5:                                                ; preds = %1
  br label %13

6:                                                ; preds = %1
  %7 = load i32, i32* @_LOWER, align 4
  %8 = call i32 @layer_off(i32 %7)
  %9 = load i32, i32* @_LOWER, align 4
  %10 = load i32, i32* @_RAISE, align 4
  %11 = load i32, i32* @_NEUTRAL, align 4
  %12 = call i32 @update_tri_layer(i32 %9, i32 %10, i32 %11)
  br label %13

13:                                               ; preds = %6, %5
  ret void
}

declare dso_local i32 @layer_off(i32) #1

declare dso_local i32 @update_tri_layer(i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
